--- a/digital_punch_clock/templates/index.html
+++ b/digital_punch_clock/templates/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Relógio de ponto</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script src="https://unpkg.com/hyperscript.org@0.9.11"></script>
     <script src="https://unpkg.com/htmx.org@1.9.5"></script>
-
 </head>
-<body>
+<body class="has-background-grey-light">
     <header>
         {% include 'navbar.html' %}
     </header>
-    <div id="main_content">
-
+    <div id="main_content" class="container body has-background-grey-light">
     </div>
 </body>
 </html>
