--- a/digital_punch_clock/templates/navbar.html
+++ b/digital_punch_clock/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar has-background-dark" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://bulma.io">
       <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
@@ -14,16 +14,17 @@
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item">
-        Home
+        <p class="has-text-white">Home</p>
       </a>
 
       <a class="navbar-item">
-        Documentation
+        <p class="has-text-white">Documentation</p>
       </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
-          Cadastros
+
+          <p class="has-text-white">Home</p>
         </a>
 
         <div class="navbar-dropdown">
